--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Clearpath : A new smart phone app helps navigate driving with an accurate travel time estimation">
+    <title>ClearPath by usunyu</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Clearpath</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>ClearPath</h1>
+        <p>A new smart phone app helps navigate driving with an accurate travel time estimation</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/usunyu/ClearPath">View on GitHub</a>
+        <p class="view"><a href="https://github.com/usunyu/ClearPath">View the Project on GitHub <small>usunyu/ClearPath</small></a></p>
 
-          <h1 id="project_title">Clearpath</h1>
-          <h2 id="project_tagline">A new smart phone app helps navigate driving with an accurate travel time estimation</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/usunyu/ClearPath/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/usunyu/ClearPath/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/usunyu/ClearPath/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/usunyu/ClearPath/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/usunyu/ClearPath">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a id="clearpath" class="anchor" href="#clearpath" aria-hidden="true"><span class="octicon octicon-link"></span></a>ClearPath</h1>
 
@@ -42,17 +39,12 @@
 
 <p>Experimental results show that Clearpath yields 18% travel-time savings over Google Map's paths, and travel - time accuracy is 92%. ClearPath received more than $2 million research funding in the last 3 years from variety of industry and federal agencies.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Clearpath maintained by <a href="https://github.com/usunyu">usunyu</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/usunyu">usunyu</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
