Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <h4>
 <a id="demo" class="anchor" href="#demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo:</h4>
 
-<p><img src="/images/pattern.jpg" alt="Pattern"></p>
+<p><img src="images/pattern.jpg" alt="Pattern"></p>
 
 <p>This is the pattern I created from the data of sensors I matched, I filled the missing data from near related sensor or history data. </p>
 
@@ -112,7 +112,7 @@
 <h4>
 <a id="demo-1" class="anchor" href="#demo-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo:</h4>
 
-<p><img src="/images/osm.jpg" alt="OSM"></p>
+<p><img src="images/osm.jpg" alt="OSM"></p>
 
 <p>This is map near our campus I fetched from OSM Project and converted it to our project's format. 
 And I cleaned all the shape, building, barrier,etc which cannot be used for routing.</p>
@@ -158,9 +158,9 @@ And I cleaned all the shape, building, barrier,etc which cannot be used for rout
     </tr>
 </table>
 
-<p><img src="/images/astar.jpg" alt="A*">
-<img src="/images/bh.jpg" alt="BH">
-<img src="/images/not.jpg" alt="Not always optimal"></p>
+<p><img src="images/astar.jpg" alt="A*">
+<img src="images/bh.jpg" alt="BH">
+<img src="images/not.jpg" alt="Not always optimal"></p>
 
 <h5>
 <a id="3-reference" class="anchor" href="#3-reference" aria-hidden="true"><span class="octicon octicon-link"></span></a>3) Reference</h5>
