Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       </header>
       <section>
         <h1>
-<a id="clearpath" class="anchor" href="#clearpath" aria-hidden="true"><span class="octicon octicon-link"></span></a>ClearPath</h1>
+<a id="clearpath" class="anchor" href="#clearpath" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://imsc.usc.edu/ClearPathNew/">ClearPath</a>
+</h1>
 
 <p>A new smart phone app helps navigate driving with an accurate travel time estimation.</p>
 
